--- a/css/my_class.css
+++ b/css/my_class.css
@@ -382,14 +382,16 @@ max-width: 276px;
 
 .lesson-carousel {
   width: 100%;
+  height: 124px;
   display: flex;
   flex-direction: row;
   position: relative;
+  margin-bottom: 36px;
 }
 
 .lesson-carousel-icon {
-  width: 46px;
-  height: 90px;
+  width: 62px;
+  height: 124px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -404,4 +406,90 @@ max-width: 276px;
 .lesson-carousel-icon.next {
   background-image: url("../images/btn_time_r.svg");
   right: 0px;
+}
+
+
+.lesson-unit {
+  width: 100%;
+  padding-bottom: 20px;
+  background-color: rgba(	237,	76,	124,.1);
+
+}
+
+.lesson-unit-image {
+  position: absolute;
+  left: 36px;
+  top: 0px;
+}
+
+/* lesson unit info */
+.lesson-unit-info{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.lesson-unit-info-title{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  z-index: 1;
+  }
+
+  .lesson-unit-info-title-text{
+    width: 184px;
+    height: 42px;
+    background-color: #fc8aac;
+    color:#ffffff;
+    font-size: 24px;
+    text-align: center;
+    line-height: 42px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  .lesson-unit-info-content{
+    width: 100%;
+    max-width: 928px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0px auto;
+    padding: 0px 8px;
+    z-index: 1;
+  }
+
+.lesson-unit-info-content-title{
+color:#ed4c7c;
+font-size: 34px;
+margin-top: 8px;
+margin-bottom: 14px;
+}
+
+.lesson-unit-info-content-text{
+  width: 100%;
+  color:#707070;
+  font-size: 18px;
+  text-align: center;
+  z-index: 1;
+}
+
+/* lesson unit course */
+.lesson-unit-course{
+
+}
+
+.course {
+display: flex;
+flex-direction: row;
+}
+
+.course-info {
+
+}
+
+.course-card {
+
 }
