--- a/css/my_class.css
+++ b/css/my_class.css
@@ -71,10 +71,10 @@
   background-size: contain;
 }
 
-.calendar-time .calendar-time-text{
+.calendar-time .calendar-time-text {
   font-size: 22px;
-  color:#8f8f8f;
-  margin-right:28px;
+  color: #8f8f8f;
+  margin-right: 28px;
 }
 
 .calendar-header {
@@ -86,7 +86,7 @@
 }
 
 .calendar-header-text {
-  color:#50b1ff;
+  color: #50b1ff;
   font-size: 24px;
 }
 
@@ -123,7 +123,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom:4px;
+  margin-bottom: 4px;
   font-size: 22px;
   color: #707070;
   text-align: center;
@@ -138,12 +138,12 @@
   line-height: 34px;
 }
 
-.calendar-body-item-text.day{
+.calendar-body-item-text.day {
   cursor: pointer;
 }
 
-.calendar-body-item-text.day.active{
-  color:#ffffff;
+.calendar-body-item-text.day.active {
+  color: #ffffff;
   background-color: #50b1ff;
 }
 
@@ -169,7 +169,6 @@
   flex-direction: row;
   justify-content: center;
 }
-
 
 .calendar-body-item-more[data-is-more="false"] {
   display: none;
@@ -307,7 +306,7 @@
 }
 
 .header-image.monster01 {
-max-width: 276px;
+  max-width: 276px;
 }
 
 .header-image.monster02 {
@@ -380,6 +379,11 @@ max-width: 276px;
   border-radius: 20px;
 }
 
+.lesson-title {
+  color: #cccccc;
+  font-size: 30px;
+}
+
 .lesson-carousel {
   width: 100%;
   height: 124px;
@@ -408,12 +412,10 @@ max-width: 276px;
   right: 0px;
 }
 
-
 .lesson-unit {
   width: 100%;
   padding-bottom: 20px;
-  background-color: rgba(	237,	76,	124,.1);
-
+  background-color: rgba(237, 76, 124, 0.1);
 }
 
 .lesson-unit-image {
@@ -423,73 +425,70 @@ max-width: 276px;
 }
 
 /* lesson unit info */
-.lesson-unit-info{
+.lesson-unit-info {
   width: 100%;
   display: flex;
   flex-direction: column;
   position: relative;
 }
 
-.lesson-unit-info-title{
+.lesson-unit-info-title {
   width: 100%;
   display: flex;
   justify-content: center;
   z-index: 1;
-  }
-
-  .lesson-unit-info-title-text{
-    width: 184px;
-    height: 42px;
-    background-color: #fc8aac;
-    color:#ffffff;
-    font-size: 24px;
-    text-align: center;
-    line-height: 42px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
-
-  .lesson-unit-info-content{
-    width: 100%;
-    max-width: 928px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0px auto;
-    padding: 0px 8px;
-    z-index: 1;
-  }
-
-.lesson-unit-info-content-title{
-color:#ed4c7c;
-font-size: 34px;
-margin-top: 8px;
-margin-bottom: 14px;
 }
 
-.lesson-unit-info-content-text{
+.lesson-unit-info-title-text {
+  width: 184px;
+  height: 42px;
+  background-color: #fc8aac;
+  color: #ffffff;
+  font-size: 24px;
+  text-align: center;
+  line-height: 42px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.lesson-unit-info-content {
   width: 100%;
-  color:#707070;
+  max-width: 928px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0px auto;
+  padding: 0px 8px;
+  z-index: 1;
+}
+
+.lesson-unit-info-content-title {
+  color: #ed4c7c;
+  font-size: 34px;
+  margin-top: 8px;
+  margin-bottom: 14px;
+}
+
+.lesson-unit-info-content-text {
+  width: 100%;
+  color: #707070;
   font-size: 18px;
   text-align: center;
   z-index: 1;
 }
 
 /* lesson unit course */
-.lesson-unit-course{
-
+.lesson-unit-course {
 }
 
 .course {
-display: flex;
-flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .course-info {
-
 }
 
 .course-card {
-
 }
