--- a/css/my_class.css
+++ b/css/my_class.css
@@ -850,23 +850,24 @@
 
 /* story */
 .story {
+  margin-top: 40px;
 }
 
 .story-header {
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: flex-end;
   padding: 0px 8px;
 }
 
 .story-header-image.toy01 {
-  max-width: 178px;
+  max-width: 230px;
 }
 
 .story-header-image.toy02 {
-  max-width: 164px;
+  max-width: 252px;
 }
 
 .story-header-image-item {
@@ -876,7 +877,15 @@
 
 .story-header-title {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   position: relative;
+  margin: 0px -60px 32px -20px;
+}
+.story-header-title-text {
+  color: #50b1ff;
+  font-size: 36px;
+  font-weight: bold;
 }
 
 .story-content {
