--- a/css/common.css
+++ b/css/common.css
@@ -56,7 +56,8 @@
 
 /* carousel icon */
 /* size */
-/* sm = w: 62px, H: 124p */
+/* xs = w: 35px, H: 70px */
+/* sm = w: 62px, H: 124px */
 /* md = w: 62px, H: 124px */
 
 .carousel-icon {
@@ -65,7 +66,12 @@
   background-size: contain;
   position: absolute;
   cursor: pointer;
-  z-index: 1;
+  z-index: 5;
+}
+
+.carousel-icon.xs {
+  width: 35px;
+  height: 70px;
 }
 
 .carousel-icon.sm {
@@ -81,6 +87,8 @@
 .carousel-icon.previous {
   background-image: url("../images/carousel_previous.svg");
   left: 0px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .carousel-icon.previous:hover {
@@ -95,6 +103,8 @@
 .carousel-icon.next {
   background-image: url("../images/carousel_next.svg");
   right: 0px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .carousel-icon.next:hover {
