--- a/css/update_time.css
+++ b/css/update_time.css
@@ -16,11 +16,10 @@
 .update-time-modal {
   width: 100%;
   max-width: 700px;
-  height: 750px;
+  min-height: 750px;
   background-color: #ffffff;
   border-radius: 20px;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .header {
