--- a/css/common.css
+++ b/css/common.css
@@ -115,3 +115,118 @@
   background-image: url("../images/carousel_next_disabled.svg");
   cursor: not-allowed;
 }
+
+/* course-card - start */
+.course-card {
+  width: 100%;
+  max-width: 520px;
+  min-height: 260px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px 0 rgba(119, 119, 119, 0.16);
+  background-color: #ffffff;
+  margin-top: 4px;
+  overflow: hidden;
+}
+
+.course-card-info {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  padding: 14px;
+}
+
+.course-card-info-image {
+  width: 100%;
+  max-width: 220px;
+  height: 165px;
+}
+
+.course-card-info-image > img {
+  height: 100%;
+  border-radius: 10px;
+}
+
+.course-card-info-content {
+  display: flex;
+  flex-direction: column;
+  padding: 4px 12px;
+}
+
+.course-card-info-content-tag {
+  width: 100%;
+  height: 22px;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  margin-bottom: 6px;
+}
+
+.course-card-info-content-tag > p {
+  color: #50b1ff;
+  font-size: 16px;
+  line-height: 24px;
+  position: relative;
+  margin-right: 12px;
+}
+
+.course-card-info-content-tag > p:not(:last-child):before {
+  content: "";
+  width: 0.5px;
+  height: 10px;
+  background-color: #cccccc;
+  position: absolute;
+  right: -6px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.course-card-info-content-text {
+  flex: 1;
+  font-size: 20px;
+  color: #707070;
+  font-weight: bold;
+}
+
+.course-card-info-content-teacher {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.course-card-info-content-teacher-avatar {
+  max-width: 45px;
+  margin-right: 8px;
+}
+
+.course-card-info-content-teacher-avatar > img {
+  width: 100%;
+  height: 100%;
+}
+
+.course-card-action {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  padding: 14px;
+  padding-bottom: 22px;
+}
+
+.course-card-action > button:not(:last-child) {
+  margin-right: 8px;
+}
+
+.course-card-bottom {
+  width: 100%;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  padding: 0px 28px;
+  background-color: #eeeeee;
+  color: #707070;
+}
+
+.course-link {
+  color: #50b1ff;
+  cursor: pointer;
+}
+/* course-card - end */
