Update my_class_schedule and rwd styles

--- a/css/common.css
+++ b/css/common.css
@@ -154,7 +154,7 @@
 
 .course-card-info-content-tag {
   width: 100%;
-  height: 22px;
+  min-height: 22px;
   display: flex;
   flex-direction: row;
   align-content: center;
