Add my_class_reserve_big and my_class_reserve_small html

--- a/css/common.css
+++ b/css/common.css
@@ -157,6 +157,7 @@
   min-height: 22px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-content: center;
   margin-bottom: 6px;
 }
